[package]
name = "bevy_rustysynth"
description = "A plugin which adds MIDI file and soundfont audio support to the bevy engine via rustysynth."
version = "0.3.0"
edition = "2021"
license = "0BSD OR MIT OR Apache-2.0"
repository = "https://git.exvacuum.dev/bevy_rustysynth"

[dependencies]
rustysynth = "1.3"
itertools = "0.14"
async-channel = "2.3"
rodio = "0.20"

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_audio", "bevy_asset"]

[features]
default = ["hl4mgm"]
hl4mgm = []
