[package]
name = "bevy_rustysynth"
description = "A plugin which adds MIDI file and soundfont audio support to the bevy engine via rustysynth."
version = "0.6.0"
edition = "2021"
license = "0BSD OR MIT OR Apache-2.0"
repository = "https://git.soaos.dev/soaos/bevy_rustysynth"

[dependencies]
rustysynth = "1.3"
itertools = "0.14"
async-channel = "2.3"
rodio = "0.20"
lazy_static = "1.5"

[dependencies.bevy]
version = "0.16"
default-features = false
features = ["bevy_asset", "bevy_log"]

[dependencies.bevy_kira_audio]
version = "0.23"
optional = true

[features]
default = ["hl4mgm", "bevy_audio"]
kira = ["dep:bevy_kira_audio"]
bevy_audio = ["bevy/bevy_audio"]
hl4mgm = []
